Styled table, fixed issue with visible new-edit-delete buttons

--- a/src/app/features/procedures/components/procedures-page/procedures-page.component.sass
+++ b/src/app/features/procedures/components/procedures-page/procedures-page.component.sass
@@ -4,6 +4,9 @@
   min-width: 700px
   width: 80%
 
+table
+  width: 100%
+
 .wrapper
   width: 95%
   margin-left: 5%
